# pkg/diag/validator/resource.go
@@ -29,6 +29,7 @@ type Resource struct {
 	name      string
 	status    Status
 	err       error
+	ErrCode   ErrorCode
 }
 
 func (r Resource) Kind() string      { return r.kind }
@@ -42,8 +43,8 @@ func (r Resource) String() string {
 
 
 // NewResource creates new Resource of kind
-func NewResource(namespace, kind, name string, status Status, err error) Resource {
-	return Resource{namespace: namespace, kind: kind, name: name, status: status, err: err}
+func NewResource(namespace, kind, name string, status Status, err error, errCode ErrorCode) Resource {
+	return Resource{namespace: namespace, kind: kind, name: name, status: status, err: err, ErrCode: errCode}
 }
 
 // objectWithMetadata is any k8s object that has kind and object metadata.
@@ -53,6 +54,6 @@ type objectWithMetadata interface {
 }
 
 // NewResourceFromObject creates new Resource with fields populated from object metadata.
-func NewResourceFromObject(object objectWithMetadata, status Status, err error) Resource {
-	return NewResource(object.GetNamespace(), object.GetObjectKind().GroupVersionKind().Kind, object.GetName(), status, err)
+func NewResourceFromObject(object objectWithMetadata, status Status, err error, errCode ErrorCode) Resource {
+	return NewResource(object.GetNamespace(), object.GetObjectKind().GroupVersionKind().Kind, object.GetName(), status, err, errCode)
 }
