# pkg/skaffold/deploy/resource/status.go
@@ -16,9 +16,12 @@ limitations under the License.
 
 package resource
 
+import "github.com/GoogleContainerTools/skaffold/proto"
+
 type Status struct {
 	err      error
 	details  string
+	errCode  proto.ErrorCode
 	reported bool
 }
 
@@ -26,6 +29,9 @@ func (rs Status) Error() error {
 	return rs.err
 }
 
+func (rs Status) ErrorCode() proto.ErrorCode {
+	return rs.errCode
+}
 func (rs Status) String() string {
 	if rs.err != nil {
 		return rs.err.Error()
@@ -43,9 +49,10 @@ func (rs Status) Equal(other Status) bool {
 	return rs.err == other.err
 }
 
-func newStatus(msg string, err error) Status {
+func newStatus(msg string, errCode proto.ErrorCode, err error,) Status {
 	return Status{
 		details: msg,
 		err:     err,
+		errCode: errCode,
 	}
 }
